arty_base.sdk/.metadata/.plugins/org.eclipse.cdt.ui/KF.build.log
14:49:14 **** Incremental Build of configuration Debug for project KF ****
make all 
'Building file: ../src/helloworld.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -I../../KF_bsp/microblaze_0/include -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mno-xl-soft-div -mcpu=v11.0 -mno-xl-soft-mul -mxl-multiply-high -mhard-float -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
In file included from ../src/helloworld.c:52:
../src/xintc.h:300:38: error: 'XPAR_INTC_MAX_NUM_INTR_INPUTS' undeclared here (not in a function); did you mean 'XPAR_XTTCPS_NUM_INSTANCES'?
  XIntc_VectorTableEntry HandlerTable[XPAR_INTC_MAX_NUM_INTR_INPUTS];
                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                      XPAR_XTTCPS_NUM_INSTANCES
../src/helloworld.c: In function 'InitializePotentio':
../src/helloworld.c:70:40: error: 'XPAR_XSYSMON_0_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_XSDPS_0_DEVICE_ID'?
     xadc_config = XSysMon_LookupConfig(XPAR_XSYSMON_0_DEVICE_ID);
                                        ^~~~~~~~~~~~~~~~~~~~~~~~
                                        XPAR_XSDPS_0_DEVICE_ID
../src/helloworld.c:70:40: note: each undeclared identifier is reported only once for each function it appears in
../src/helloworld.c: In function 'SetupInterrupts':
../src/helloworld.c:81:44: error: 'XPAR_INTC_0_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_XTTCPS_0_DEVICE_ID'?
     XIntc_Initialize(&InterruptController, XPAR_INTC_0_DEVICE_ID);
                                            ^~~~~~~~~~~~~~~~~~~~~
                                            XPAR_XTTCPS_0_DEVICE_ID
../src/helloworld.c:82:41: error: 'XPAR_INTC_0_XADC_0_VEC_ID' undeclared (first use in this function); did you mean 'XPAR_PS7_XADC_0_DEVICE_ID'?
     XIntc_Connect(&InterruptController, XPAR_INTC_0_XADC_0_VEC_ID, (XInterruptHandler)Potentio_InterruptHandler, (void*)&AGVPotentio);
                                         ^~~~~~~~~~~~~~~~~~~~~~~~~
                                         XPAR_PS7_XADC_0_DEVICE_ID
make: *** [src/subdir.mk:26: src/helloworld.o] Error 1

14:49:17 Build Finished (took 3s.881ms)

